k8s/base/mailpit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: eve
  labels:
    app.kubernetes.io/name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailpit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailpit
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mailpit
          securityContext:
            allowPrivilegeEscalation: false
          image: axllent/mailpit:latest
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
